GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/Eurostar_To_Amex_Detail_Response__c.object-meta.xml
<CustomObject>
    <label>Eurostar To Amex Detail Response</label>
    <nameField>
        <displayFormat>ETADR-{0000000000}</displayFormat>
        <label>Eurostar To Amex Detail Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eurostar To Amex Detail Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>