GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>32</length>
    <type>Text</type>
</CustomField>