GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/ALT_CIN__c.field-meta.xml
<CustomField>
    <fullName>ALT_CIN__c</fullName>
    <label>ALT_CIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>