GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/Alt_Surname__c.field-meta.xml
<CustomField>
    <fullName>Alt_Surname__c</fullName>
    <label>Alt_Surname</label>
    <length>30</length>
    <type>Text</type>
</CustomField>