GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>Batch_Type__c</fullName>
    <label>Batch Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>