GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/CIN__c.field-meta.xml
<CustomField>
    <fullName>CIN__c</fullName>
    <label>CIN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>