GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/Communication_Address__c.field-meta.xml
<CustomField>
    <fullName>Communication_Address__c</fullName>
    <label>Communication  Address</label>
    <length>1</length>
    <type>Text</type>
</CustomField>