GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/Enrol_Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Enrol_Verification_Code__c</fullName>
    <label>Enrol / Verification Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>