GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <label>First name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>