GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/Partner_code__c.field-meta.xml
<CustomField>
    <fullName>Partner_code__c</fullName>
    <label>Partner code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>