GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/Record_Idr__c.field-meta.xml
<CustomField>
    <fullName>Record_Idr__c</fullName>
    <label>Record Idr</label>
    <length>1</length>
    <type>Text</type>
</CustomField>