GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/Supplier_member_Id__c.field-meta.xml
<CustomField>
    <fullName>Supplier_member_Id__c</fullName>
    <label>Supplier member Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>