GearsetPOC/force-app/main/default/objects/Eurostar_To_Amex_Detail_Response__c/fields/Transfer_type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_type__c</fullName>
    <label>Transfer type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>